--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node index.js",
-    "postinstall" :"echo $data && echo $ENV_BUCKET_NAME",
-    "build": "echo $data && echo $ENV_BUCKET_NAME && npm ci"
+    "postinstall" :"echo $data && echo $APP_FOLDER",
+    "build": "echo $data && echo $APP_FOLDER && npm ci"
   },
   "author": "",
   "license": "ISC",
